# zsaude

./: index.html  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  .env.example  .env.oracle  .env.postgres.bak  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  alembic_tenant.ini  docker-compose.oracle.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py  metrics.py  v1.py
backend/app/core/: audit.py  config.py  crypto.py  deps.py  email.py  email_templates.py  exceptions.py  logging.py  metrics.py  modules.py  pagination.py  schema_base.py  security.py  validators.py
backend/app/core/cbo_abilities/: __init__.py  catalog.py  registry.py  seed.py
backend/app/core/permissions/: __init__.py  catalog.py  registry.py  seed.py
backend/app/db/: base.py  engine_registry.py  file_model.py  models_registry.py  provisioning.py  query_helpers.py  schema_migrator.py  schema_version.py  session.py  tenant_schemas.py  types.py
backend/app/db/dialect/: __init__.py  base.py  oracle.py  postgresql.py
backend/app/db/seeds/: __init__.py  _loader.py  ai_catalog.py  reference_tables.py  system_settings.py
backend/app/middleware/: audit_context.py  audit_writer.py  metrics.py  request_id.py  security_headers.py
backend/app/modules/ai/: __init__.py  circuit.py  costs.py  models.py  partitions.py  pii.py  prompt_loader.py  quota.py  router.py  schemas.py  service.py
backend/app/modules/attendances/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/audit/: helpers.py  models.py  router.py  schemas.py  writer.py
backend/app/modules/auth/: models.py  password_policy.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/branding/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/cln/: __init__.py  campinas_protocol.py  router.py  schemas.py  service.py
backend/app/modules/cnes/: admin_router.py  binding_reconciler.py  facility_mapping.py  router.py  schemas.py  service.py
backend/app/modules/devices/: __init__.py  hub.py  models.py  router.py  schemas.py  service.py
backend/app/modules/dgn/: router.py
backend/app/modules/email_credentials/: models.py  router.py  schemas.py  service.py
backend/app/modules/email_templates/: catalog.py  dispatcher.py  (+6 more)
backend/app/services/: storage.py
backend/app/tenant_models/: __init__.py  _registry.py  attendances.py  face.py  patients.py
backend/migrations/: env.py
backend/migrations/versions/: 20260415_0001_initial.py  20260415_0002_schema_app.py  20260415_0003_user_level.py  20260415_0004_archived_flags.py  20260415_0005_system_settings.py  20260415_0006_user_sessions.py  20260415_0007_rbac_system.py  20260415_0008_rbac_finalize.py  20260415_0009_municipality_geo_neighborhoods.py  20260415_0010_municipality_enabled_modules.py  20260415_0011_sigtap_tables.py  20260416_0012_reference_tables.py  20260416_0013_seed_etnias.py  20260416_0014_reference_tables_expand.py  20260416_0015_tipos_documento_cleanup.py  20260416_0016_municipality_cadsus_creds.py  20260416_0017_cadsus_base_setting.py  20260416_0018_cadsus_password_fernet.py  20260416_0019_ai_core_tables.py  20260416_0020_ai_catalog_seed.py  20260416_0021_ai_global_scope.py  20260416_0022_ai_default_routes.py  20260416_0023_pgvector_extension.py  20260416_0027_municipality_databases.py  20260417_0024_ai_prompts_real_body.py  20260417_0025_ai_openrouter_models.py  20260417_0026_ai_cost_precision.py  20260417_0028_files_table.py  20260418_0029_user_photos_and_face.py  20260418_0030_user_social_name.py  20260418_0031_user_cpf_email_nullable.py  20260418_0032_password_policy.py  20260418_0033_must_change_password.py  20260418_0034_branding_configs.py  20260419_0035_email_templates.py  20260419_0036_email_verification.py  20260419_0037_municipality_timezone.py  20260419_0038_email_send_log.py  20260419_0039_email_credentials.py  20260419_0040_session_active_context.py  (+26 more)
backend/migrations_tenant/: env.py
backend/migrations_tenant/versions/: 20260415_0001_patients.py  20260415_2231_add_cnes_tables.py  20260416_t0003_patients_expand.py  20260416_t0004_patient_documents.py  20260416_t0005_cpf_optional.py  20260416_t0006_patient_lat_lng.py  20260417_t0007_face_embeddings.py  20260417_t0008_files.py  20260417_t0008_files_table.py  20260417_t0009_photo_storage_key.py  20260421_t0009_attendances.py  20260421_t0010_attendance_sector_status.py  20260421_t0011_identity_review.py  20260422_t0012_patient_addresses.py  20260422_t0013_attendance_events.py  20260423_t0014_cln_statuses.py  20260423_t0015_triage_records.py  20260423_t0016_priority_groups.py  20260423_t0017_triage_expanded.py  20260423_t0018_attendance_procedures.py  20260423_t0019_triage_complaint_code.py  20260423_t0020_referred_status.py
backend/observability/: prometheus.yml  promtail.yml
backend/scripts/: create_superuser.py  face_reindex.py  generate_ddl.py  generate_jwt_keys.py  migrate_tenants.py  seed.py  seed_full.py  seed_tts.py  send_birthday_emails.py  simulate_traffic.py  test_oracle.sh
backend/tests/: conftest.py  test_ai_costs.py  test_crypto.py  test_db_parity.py
backend/tests/auth/: test_forgot_password.py  test_login.py
backend/tests/core/: test_email.py
backend/tests/modules/: test_email_templates_service.py
(+465 files in other folders)
